--- a/app/src/main/res/layout/activity_intent_service.xml
+++ b/app/src/main/res/layout/activity_intent_service.xml
@@ -5,38 +5,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
+    android:gravity="center_horizontal"
     android:orientation="vertical"
-    tools:context="com.bourne.android_common.ServiceDemo.ServiceActivity">
+    tools:context="com.bourne.android_common.ServiceDemo.IntentServiceActivity">
+
     <Button
+        android:id="@+id/btn_start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
         android:onClick="start"
-        android:text="start"
-    />
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="stop"
-        android:text="stop"
-    />
-    <Button
+        android:text="开始"
+        />
 
+    <TextView
+        android:id="@+id/tv_status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="bind"
-        android:text="bind"/>
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="unbind"
-        android:text="unbind"
-    />
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="sayHello"
-        android:text="sayHello"
-    />
+        android:layout_marginTop="50dp"
+        tools:text="状态：运行中"/>
 
+    <ProgressBar
+        android:id="@+id/progressbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_marginTop="50dp"/>
+    <TextView
+        android:id="@+id/tv_progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        tools:text="98%"/>
 </LinearLayout>
