--- a/app/src/main/res/layout/activity_thread_pool_executor.xml
+++ b/app/src/main/res/layout/activity_thread_pool_executor.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.bourne.android_common.ServiceDemo.ThreadPoolExecutorActivity">
+    android:layout_height="match_parent">
 
     <Button
         android:id="@+id/button"
@@ -14,5 +11,5 @@
         android:textAllCaps="false"
         android:layout_weight="1"
         android:onClick="begin"
-        android:text="start"/>
+        android:text="点击增加一个售票窗口"/>
 </LinearLayout>
