--- a/app/src/main/res/layout/activity_thread.xml
+++ b/app/src/main/res/layout/activity_thread.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.bourne.android_common.ServiceDemo.ThreadActivity">
+    tools:context="com.bourne.android_common.ThreadDemo.ThreadActivity">
 
     <TextView
         android:id="@+id/textView"
