--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,10 +6,12 @@
     android:layout_height="match_parent"
     tools:context="com.bourne.android_common.MainActivity">
 
-    <TextView
+    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"/>
+    <Button
+ android:onClick="click"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-/>
-
+        android:layout_height="wrap_content" android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" android:layout_alignParentTop="true"
+        android:layout_marginLeft="113dp" android:layout_marginStart="113dp"
+        android:layout_marginTop="95dp" android:text="Button"/>
 </RelativeLayout>
