--- a/app/src/main/res/layout/activity_network_request.xml
+++ b/app/src/main/res/layout/activity_network_request.xml
@@ -1,11 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.bourne.android_common.NetworkRequestDemo.NetworkRequestActivity">
-    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
-              android:text="net"/>
-</RelativeLayout>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/btn_downloadImage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="下载图片"
+                />
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <Button
+                android:id="@+id/btn_downloadFile"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="下载文件"
+                />
+
+            <Button
+                android:id="@+id/btn_downloadText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="下载文字"
+                />
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+        </LinearLayout>
+
+    </ScrollView>
+</LinearLayout>
